--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,2 @@
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",tmux-256color*:Tc"
+set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",screen-256color*:Tc"
