--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,2 @@
 set -g default-terminal "screen-256color"
-set -ag terminal-overrides ",screen-256color*:Tc"
+set -ag terminal-overrides ",xterm-256color:RGB"
