nvim: Point submodules at their main branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,15 @@
-[submodule "nvim/.config/nvim/pack/submodules/start/editorconfig-vim"]
-	path = nvim/.config/nvim/pack/submodules/start/editorconfig-vim
-	url = https://github.com/editorconfig/editorconfig-vim.git
 [submodule "nvim/.config/nvim/pack/submodules/start/vim-markdown"]
 	path = nvim/.config/nvim/pack/submodules/start/vim-markdown
 	url = https://github.com/preservim/vim-markdown.git
+	branch = master
 [submodule "nvim/.config/nvim/pack/submodules/start/neoformat"]
 	path = nvim/.config/nvim/pack/submodules/start/neoformat
 	url = https://github.com/sbdchd/neoformat.git
+	branch = master
 [submodule "nvim/.config/nvim/pack/submodules/opt/NeoSolarized"]
 	path = nvim/.config/nvim/pack/submodules/opt/NeoSolarized
 	url = https://github.com/overcache/NeoSolarized.git
-[submodule "nvim/.config/nvim/pack/submodules/start/nvim-lspconfig"]
-	path = nvim/.config/nvim/pack/submodules/start/nvim-lspconfig
-	url = https://github.com/neovim/nvim-lspconfig.git
-[submodule "nvim/.config/nvim/pack/submodules/start/nvim-cmp"]
-	path = nvim/.config/nvim/pack/submodules/start/nvim-cmp
-	url = https://github.com/hrsh7th/nvim-cmp.git
-[submodule "nvim/.config/nvim/pack/submodules/start/cmp-nvim-lsp"]
-	path = nvim/.config/nvim/pack/submodules/start/cmp-nvim-lsp
-	url = https://github.com/hrsh7th/cmp-nvim-lsp.git
-[submodule "nvim/.config/nvim/pack/submodules/start/LuaSnip"]
-	path = nvim/.config/nvim/pack/submodules/start/LuaSnip
-	url = https://github.com/L3MON4D3/LuaSnip.git
+[submodule "nvim/.config/nvim/pack/submodules/start/editorconfig-vim"]
+	path = nvim/.config/nvim/pack/submodules/start/editorconfig-vim
+	url = https://github.com/editorconfig/editorconfig-vim.git
+	branch = master
