--- a/nvim/.config/nvim/.editorconfig
+++ b/nvim/.config/nvim/.editorconfig
@@ -5,7 +5,7 @@ charset = utf-8
 end_of_line = lf
 max_line_length = 80
 
-[*.vim]
+[*.{lua, vim}]
 indent_style = space
 indent_size = 2
 insert_final_newline = true
