--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,6 +7,8 @@
 	rebase = true
 [rebase]
 	autostash = true
+[submodule]
+	recurse = true
 [user]
 	email = marjacob@users.noreply.github.com
 	name = marjacob
