--- a/sway/.config/sway/config.d/bindings.conf
+++ b/sway/.config/sway/config.d/bindings.conf
@@ -12,7 +12,7 @@
     bindsym $mod+d exec $menu
 
     # Lock the system
-    bindsym --release $mod+l exec $lockscreen
+    bindsym $mod+grave exec $lockscreen
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
