--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,3 @@
-set -g default-terminal "screen-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+# Enable 24-bit color in tmux sessions.
+set-option -g  default-terminal   "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:RGB"
