sway: Use $lockscreen in idle configuration

--- a/sway/.config/sway/config.d/idle.conf
+++ b/sway/.config/sway/config.d/idle.conf
@@ -2,6 +2,6 @@
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 exec swayidle -w \
-	timeout 300 '${HOME}/.config/sway/scripts/lock' \
+	timeout 300 "$lockscreen" \
 	timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-	before-sleep '${HOME}/.config/sway/scripts/lock'
+	before-sleep "$lockscreen"
