--- a/.gitmodules
+++ b/.gitmodules
@@ -2,19 +2,19 @@
 	path = nvim/.config/nvim/pack/submodules/opt/vim-solarized8
 	url = https://github.com/lifepillar/vim-solarized8.git
 	branch = master
-	ignore = dirty
+	ignore = all
 [submodule "nvim/.config/nvim/pack/submodules/start/editorconfig-vim"]
 	path = nvim/.config/nvim/pack/submodules/start/editorconfig-vim
 	url = https://github.com/editorconfig/editorconfig-vim.git
 	branch = master
-	ignore = dirty
+	ignore = all
 [submodule "nvim/.config/nvim/pack/submodules/start/neoformat"]
 	path = nvim/.config/nvim/pack/submodules/start/neoformat
 	url = https://github.com/sbdchd/neoformat.git
 	branch = master
-	ignore = dirty
+	ignore = all
 [submodule "nvim/.config/nvim/pack/submodules/start/vim-markdown"]
 	path = nvim/.config/nvim/pack/submodules/start/vim-markdown
 	url = https://github.com/preservim/vim-markdown.git
 	branch = master
-	ignore = dirty
+	ignore = all
