sway: Use custom en_NO keyboard layout

--- a/sway/.config/sway/config.d/keyboard.conf
+++ b/sway/.config/sway/config.d/keyboard.conf
@@ -1,6 +1,6 @@
 # man 5 sway-input
 input "type:keyboard" {
-	xkb_layout us,no
+	xkb_layout en_NO
 	xkb_options ctrl:nocaps
 	xkb_variant ,nodeadkeys
 }
